<resources>
    <string name="app_name">Pantry</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="display_name">Nickname</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
    <string name="storage">Storage</string>
    <string name="storages">Storages</string>
    <string name="shoppinglist">Shopping list</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_storages">Search in storages</string>
    <string name="search_no_result">No results found</string>
    <string name="account_header">Account</string>
    <string name="app_header">App</string>
    <string name="edit_display_name">Change nickname</string>
    <string name="edit_family">Switch to another household</string>
    <string name="edit_family_summary">Connect to another household in order to see and manage it\'s pantry</string>
    <string name="logout">Logout</string>
    <string name="logout_summary">Log out from the application on this device</string>
    <string name="theme_title">Theme</string>
    <string name="theme_follow_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="version">Version</string>
    <string name="whatsup">Wassup? Maybe you should do something more useful.</string>
    <string name="credits_summary">Created by Tamás Öhlsläger as his thesis under the supervision of István Siket Dr.</string>
    <string name="back">Back</string>
    <string name="create_user_failed">Creating user failed</string>
    <string name="login_failed">Login unsuccessful</string>
    <string name="password_again">Password again</string>
    <string name="connect_to_family">Connect to a household</string>
    <string name="create_new">Create new</string>
    <string name="connect_to_existing">Connect to existing</string>
    <string name="connect">Connect</string>
    <string name="email_family">Email address of the creator of the household</string>
    <string name="email_empty">Type in an email address</string>
    <string name="family_does_not_exist">The household does not exist</string>
    <string name="fridge">Freezer</string>
    <string name="pantry">Pantry</string>
    <string name="name">Name</string>
    <string name="volume">Count</string>
    <string name="shelf">Shelf</string>
    <string name="shoppinglist_desc">Add the desired items to the shopping list.</string>
    <string name="messages_desc">Leave a message to the other members of the household to make sure they don\'t miss out on anything.</string>
    <string name="require_email">Type in your email address</string>
    <string name="require_password">Type in a password</string>
    <string name="require_password_again">Type in the password again</string>
    <string name="require_name">Type in your nickname</string>
    <string name="require_longer_password">The password needs to be at least 8 characters long</string>
    <string name="require_matching_passwords">The passwords does not match</string>
    <string name="require_not_empty">This field cannot be empty</string>
    <string name="save">Save</string>
    <string name="saving">Saving…</string>
    <string name="family">Household: %1$s</string>
    <string name="delete">Remove</string>
    <string name="modify">Modify</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="nth_shelf">. shelf</string>
    <string name="new_message">New message</string>
    <string name="new_message_here">Start typing your message here…</string>
    <string name="edit">Edit</string>
    <string name="edit_msg">Edit message</string>
    <string name="by_name">By name</string>
    <string name="by_shelf">By shelf</string>
    <string name="by_date">By date</string>
    <string name="sort_semicolon">Sort:</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="confirm_discard_message">Discard message?</string>
    <string name="discard">Discard</string>
    <string name="storage_empty">Empty storage</string>
    <string name="confirm_delete_item">Remove item?</string>
    <string name="confirm_delete_message">Delete message?</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="recently_bought">Recently bought</string>
    <string name="got_it">Got it</string>
    <string name="first_use_shopping_list">Quick tip: swipe the items to either side in order to delete them.</string>
    <string name="notification_new_message_title">New message</string>
    <string name="notification_new_message_desc">Tap to see</string>
    <string name="checking_failed">Checking failed</string>
    <string name="format_datetime">d/M/yyyy hh:mm:ss aa</string>
    <string name="format_date">d/M/yyyy</string>
</resources>
