<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@drawable/chooser_background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="12dp"
    android:elevation="12dp"
    android:layout_marginTop="1dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/handle"
        android:layout_marginTop="6dp"
        android:rotation="180"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/colorText"
        android:text="@string/connect_to_family"/>


    <Button
        android:id="@+id/btnNewFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        app:cornerRadius="18dp"
        android:text="@string/create_new" />

    <Button
        android:id="@+id/btnExistingFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        app:cornerRadius="18dp"
        android:text="@string/connect_to_existing" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNewFamilyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:background="@color/transparent"
            android:hint="@string/email_family" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>