<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:clipToPadding="false"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnLessItems"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:foreground="@drawable/ripple_round"
        android:background="@drawable/shape_oval"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/textItemCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="18sp"
        style="@android:style/TextAppearance.Material.Body1"
        android:text="@string/volume" />

    <Button
        android:id="@+id/btnMoreItems"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:foreground="@drawable/ripple_round"
        android:background="@drawable/shape_oval"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/plus" />

</LinearLayout>