<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottom_sheet_add_shopping_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="12dp"
    android:elevation="12dp"
    android:layout_marginTop="1dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:rotation="180"
        android:src="@drawable/handle"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:textSize="32sp"
        android:textColor="@color/colorText"
        android:text="@string/add_to_shopping_list"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddShoppingListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddShoppingListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:background="@color/transparent"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" >
        <Button
            android:id="@+id/btnCancelAddShoppingList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:foreground="@drawable/ripple_button_secondary"
            android:backgroundTint="@color/secondary_button_background"
            android:textColor="@color/colorAccent"
            app:cornerRadius="18dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btnSaveAddShoppingList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            app:cornerRadius="18dp"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>