<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout android:id="@+id/bottom_sheet_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="16dp"
        android:elevation="12dp"
        android:layout_marginTop="1dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:rotation="180"
            android:src="@drawable/handle"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/textAddBottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"
            android:textColor="@color/colorText"
            android:text="@string/add"/>

        <include layout="@layout/bottom_sheet_add_storage_item_inputs"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" >
            <Button
                android:id="@+id/btnCancelAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/ripple_button_secondary"
                android:backgroundTint="@color/secondary_button_background"
                android:textColor="@color/colorAccent"
                app:cornerRadius="18dp"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btnSaveAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                app:cornerRadius="18dp"
                android:text="@string/add" />
        </LinearLayout>

        <TextView
            android:id="@+id/textRecentlyBought"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:text="@string/recently_bought" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/addItemSuggestionsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>